--- a/index.html
+++ b/index.html
@@ -8,55 +8,49 @@
     <meta name="author" content="Виктор Абанькин">
     <meta name="keywords" content="Обучение, эффективное обучение, самообучение, методы, внимание, концентрация, распределение времени">
     
-    <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="./pages/index.css">
 
     <title>Научиться учиться</title>
     <link rel="shortcut icon" href="./images/icons/shortcut_icon.ico">
 </head>
 
-<body class="page">
+<body class="page root">
     <header class="header">
         <h1 class="header__title">
             Научиться учиться
         </h1>
-        <h2 class="header__subtitle">
+        <p class="header__subtitle">
             Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
             <a class="header__link" href="#section_techniques">
                 Узнать &#8594;
             </a>
-        </h2>
+        </p>
         <div class="header__square-pic rotation"></div>
         <img class="logo logo_place_header" src="./images/logo/logo.svg" alt="Яндекс практикум логотип">
         <img class="header__main-illustration" src="./images/two_again.png " alt="картина Опять двойка">      
     </header>    
 
-    <main>
+    <main class="content">
         <section class="description">      
-            <div class="two-columns">
+            <article class="two-columns">
                 <h2 class="two-columns__brief">
                     Главные проблемы в обучении
                 </h2>
-                <ul class="two-columns__main-text list">
-                    <li>
-                        <p class="two-columns__paragraph">
-                            Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.
-                        </p>
-                    </li>
-                    <li>
-                        <p class="two-columns__paragraph">
-                            <span class="two-columns__span-accent">
-                                Вывод:
-                            </span>
-                            учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?
-                        </p>  
-                    </li>
-                    <li>
-                        <p class="two-columns__paragraph">
-                            Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.
-                        </p>
-                    </li>
-                </ul>
-            </div>
+                <div class="two-columns__main-text list">
+                    <p class="two-columns__paragraph">
+                        Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.
+                    </p>
+                    <p class="two-columns__paragraph">
+                        <span class="two-columns__span-accent">
+                            Вывод:
+                        </span>
+                        учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?
+                    </p>  
+                    <p class="two-columns__paragraph">
+                        Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.
+                    </p>
+                </div>
+            </article>
         </section>
 
         
@@ -64,9 +58,9 @@
             <h2 class="section-title techniques__section-title">
                 Техники обучения
             </h2>
-            <h3 class="section-subtitle ">
+            <p class="section-subtitle ">
                 Пять практик от Барбары Оакли
-            </h3>
+            </p>
             <ul class="cards list">
                 <li class="cards__item">
                     <img class="cards__image" src="./images/cards-attention.png" alt="внимание">
@@ -116,25 +110,27 @@
             </ul>
         </section>
 
-        <section class="video"> 
+        <section class="video">
             <h2 class="section-title video__section-title">
                 Видео на TED
             </h2>
-            <h3 class="section-subtitle">
+            <p class="section-subtitle">
                 Для тех, кто любит прокрастинировать
-            </h3>
-            <div class="video__iframes">
-                <iframe class="video__iframe" src="https://www.youtube.com/embed/J_89IMS5gJQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-                    TED Джош Кауфман — как за 20 часов научиться чему угодно
-                </iframe>
-                <iframe  class="video__iframe" src="https://www.youtube.com/embed/0u3bccaRmmg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-                    Тим Урбан — Что происходит в голове у закоренелого прокрастинатора
-                </iframe>
-            </div>
+            </p>
+            <ul class="video__iframes list">
+                <li>
+                    <iframe class="video__iframe" src="https://www.youtube.com/embed/J_89IMS5gJQ" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+                    </iframe>
+                </li>
+                <li>
+                    <iframe  class="video__iframe" src="https://www.youtube.com/embed/0u3bccaRmmg" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+                    </iframe>
+                </li>
+            </ul>
         </section>
 
         <section class="oakley">
-            <div class="two-columns">
+            <article class="two-columns">
               <h2 class="two-columns__brief">
                   История Барбары Оакли.
               </h2>
@@ -143,29 +139,29 @@
                       С детства Барбаре не давалась математика. Она считала себя законченным гуманитарием, причём далеко не самым умным. В армии она изучала русский язык, чтобы получить надбавку, да так успешно, что её выдвинули в командиры. Но для продвижения по службе нужно было сдавать математику. И тогда Барбара придумала свой подход к точным наукам. Оказалось, если вам что-то «плохо даётся», ваши добытые трудом знания гораздо глубже, чем у тех, кому всё ясно с первого взгляда.  
                   </p>
               </div>
-            </div>
+            </article>
         </section>
 
         <section class="feynman">      
             <h2 class="feynman__title">
                 Метод Фейнмана
             </h2>
-            <h3 class="feynman__subtitle">
+            <p class="feynman__subtitle">
                 Выучить и не забыть
-            </h3>
+            </p>
             <a class="feynman__link" target="blank" href="https://lifehacker.ru/metod-fejnmana/">
                 Подробнее &#8594;
             </a>
-            <img class="feynman__image" src="./images/feinman.png" alt="Ричард Фейнман портрет">
+            <div class="feynman__image"></div>
         </section>
 
         <section class="digits">
             <h2 class="section-title digits__section-title">
                 Цифры и факты
             </h2>
-            <h3 class="section-subtitle">
+            <p class="section-subtitle">
                 Про учёбу и мозг
-            </h3>
+            </p>
             <ul class="table">
                 <li class="table__cell">
                     <h3 class="table__heading">
@@ -241,7 +237,7 @@
         </section>
 
         <section class="khan">
-            <div class="khan__container">
+            <article class="khan__container">
                 <h2 class="khan__author">
                     Салман Хан
                 </h2>
@@ -260,22 +256,20 @@
                 <div class="khan__book-container">
                     <img class="khan__book-pic" src="./images/khan-book.jpg" alt="Весь мир - школа обложка">
                     <a class="khan__buy-link" target="blank" href="https://www.labirint.ru/books/483575/">
-                        <p>
-                            Купить книгу &#8594;
-                        </p>
+                        Купить книгу &#8594;
                     </a>
                 </div>
-            </div>      
+            </article>      
         </section>
 
-        <section class="kaufman list">
+        <section class="kaufman">
             <h2 class="section-title kaufman__section-title section-title_theme_dark">
                 Принципы обучения
             </h2>
-            <h3 class="section-subtitle section-subtitle_theme_dark">
+            <p class="section-subtitle section-subtitle_theme_dark">
                 от Джоша Кауфмана
-            </h3>
-            <img class="kaufman__triangle rotation" src="./images/triangle.svg" alt="изображение треугольника">
+            </p>
+            <div class="kaufman__triangle rotation" ></div>
             <ul class="table table_theme_dark list">
                 <li class="table__cell table__cell_theme_dark">
                     <h3 class="table__heading table__heading_theme_dark">
@@ -361,27 +355,35 @@
         </section>
 
 
-        <section class="resources ">
+        <section class="resources">
             <h2 class="section-title resources__section-title">
                 Полезные ресурсы
             </h2>
-            <h3 class="section-subtitle">
+            <p class="section-subtitle">
                 Больше материалов о техниках и лайфхаках обучения
-            </h3>
-            <div class="resources__logo-zone">
-                <a class="resources__logo" target="blank" href="https://arzamas.academy/">
-                    <img src="./images/logo/resources-arzamas.svg" alt="Арзамас логотип">
-                </a>
-                <a class="resources__logo" target="blank" href="https://nplus1.ru/">
-                    <img src="./images/logo/resources-n1.svg" alt="N+1 логотип">
-                </a>
-                <a class="resources__logo" target="blank" href="https://strelka.com/">
-                    <img src="./images/logo/resources-strelka.svg" alt="Стрелка логотип">
-                </a>
-                <a class="resources__logo" target="blank" href="https://polka.academy/">
-                    <img src="./images/logo/resources-polka.svg" alt="Полка логотип">
-                </a>
-            </div>
+            </p>
+            <ul class="resources__logo-zone list">
+                <li>
+                    <a class="resources__logo" target="blank" href="https://arzamas.academy/">
+                        <img src="./images/logo/resources-arzamas.svg" alt="Арзамас логотип">
+                    </a>
+                </li>
+                <li>
+                    <a class="resources__logo" target="blank" href="https://nplus1.ru/">
+                        <img src="./images/logo/resources-n1.svg" alt="N+1 логотип">
+                    </a>
+                </li>
+                <li>
+                    <a class="resources__logo" target="blank" href="https://strelka.com/">
+                        <img src="./images/logo/resources-strelka.svg" alt="Стрелка логотип">
+                    </a>
+                </li>
+                <li>
+                    <a class="resources__logo" target="blank" href="https://polka.academy/">
+                        <img src="./images/logo/resources-polka.svg" alt="Полка логотип">
+                    </a>
+                </li>
+            </ul>
         </section>
     </main>    
 
@@ -389,7 +391,9 @@
         <div class="footer__columns">
             <div class="footer__column footer__column_content_copyright">
                 <img class="logo logo_place_footer" src="./images/logo/logo_gray.svg" alt="Яндекс практикум логотип">
-                <h3 class="footer__author"> &copy; Виктор Абанькин</h3>        
+                <p class="footer__author"> 
+                    &copy; Виктор Абанькин
+                </p>        
             </div>
             <div class="footer__column footer__column_content_info">
                 <h3 class="footer__column-heading">
@@ -397,19 +401,13 @@
                 </h3>
                 <nav class="footer__column-links">
                     <a class="footer__column-link" target="blank" href="https://practicum.yandex.ru/">
-                        <p>  
-                            Главная
-                        </p>
+                        Главная
                     </a>
                     <a class="footer__column-link" href="#">
-                        <p>
-                            Концепция
-                        </p>                        
+                        Концепция 
                     </a>
                     <a class="footer__column-link" target="blank" href="https://practicum.yandex.ru/promo/mentors-school">
-                        <p>
-                            Наставники
-                        </p>   
+                        Наставники
                     </a>
                 </nav>
             </div>
@@ -417,26 +415,26 @@
                 <h3 class="footer__column-heading">
                     Соцсети
                 </h3>
-                <div class="footer__column-links list">
-                    <a class="footer__column-link" target="blank" href="https://www.facebook.com/yandex.practicum/">
-                        <img class="footer__social-icon" src="./images/icons/facebook_white.svg" alt="Facebook иконка">
-                        <p>
+                <ul class="footer__column-links list">
+                    <li>
+                        <a class="footer__column-link" target="blank" href="https://www.facebook.com/yandex.practicum/">
+                            <img class="footer__social-icon" src="./images/icons/facebook_white.svg" alt="Facebook иконка">
                             Facebook
-                        </p>            
-                    </a>
-                    <a class="footer__column-link" target="blank" href="https://vk.com/yandex.praktikum">
-                        <img class="footer__social-icon" src="./images/icons/vk_white.svg" alt="ВКонтакте иконка">
-                        <p> 
+                        </a>
+                    </li>
+                    <li>
+                        <a class="footer__column-link" target="blank" href="https://vk.com/yandex.praktikum">
+                            <img class="footer__social-icon" src="./images/icons/vk_white.svg" alt="ВКонтакте иконка">
                             ВКонтакте
-                        </p>
-                    </a>
-                    <a class="footer__column-link" target="blank" href="https://www.instagram.com/yndx.practicum/">  
-                        <img class="footer__social-icon" src="./images/icons/instagram_white.svg" alt="Instagram иконка">
-                        <p>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="footer__column-link" target="blank" href="https://www.instagram.com/yndx.practicum/">  
+                            <img class="footer__social-icon" src="./images/icons/instagram_white.svg" alt="Instagram иконка">
                             Instagram
-                        </p>
-                    </a>
-                </div>
+                        </a>
+                    </li>
+                </ul>
             </div>
         </div>    
     </footer>
