fixing the second list of bugs (padding-bottom for lists in footer and resources blocks)

--- a/index.html
+++ b/index.html
@@ -12,9 +12,19 @@
 
     <title>Научиться учиться</title>
     <link rel="shortcut icon" href="./images/icons/shortcut_icon.ico">
+
+    <!--Владимир, во-впервых: спасибо за Вашу оперативность, потому что у других ребят работы проверяют по нескольку суток, а вы проверяете - за ночь
+                  во-вторых: у меня есть два вопросика по работе и один не по работе, если Вы не против =) я спрошу об этом и у наставника и других ребят в слаке, но почему-то хочется и у Вас узнать:
+                             1) я убрал обнуеление свойств из файла описания стилей для блока "page.css" в "normalize.css" - это хорошая практика редактировать normalize,
+                                может, это ошибка, тогда подскажите, как (в каком месте) лучше обнулять стили объектов?
+                             2) А ещё я присвоил блоку "main" пустой класс "content" - это ок?) 
+                  в-третьих: спасибо за ссылки с информацией, которая помогает исправлять работу и узнавать больше - по image, например, я бы справился, но не стал бы так вдаваться в подробности
+                  Ну и последнее: благодарю за отзыв на работу - когда человек, которому ты доверяешь свою работу, перечисляет, мне кажется, всё что ты сделал, над чем старался, на что потратил своё время - это жутко приятно!
+                             А вы ещё будете моим куратором? =)
+    -->
 </head>
 
-<body class="page root">
+<body class="page">
     <header class="header">
         <h1 class="header__title">
             Научиться учиться
